{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 30,
  "lineage": "de7bfbfc-8298-edcd-7e4e-d13d1f8606f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "juice-shop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-031e4310b9132e755",
            "arn": "arn:aws:ec2:eu-west-3:050752608040:instance/i-0f013682687c5ec49",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f013682687c5ec49",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb662282f6bf1f37",
            "private_dns": "ip-10-0-0-202.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.202",
            "public_dns": "ec2-13-37-227-230.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.37.227.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02bdf18964c4f98d5",
                "volume_size": 32,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d06d4922ed9035e",
            "tags": {
              "Name": "juice-shop"
            },
            "tags_all": {
              "Name": "juice-shop"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0803eaedc08f67e02"
            ]
          },
          "dependencies": [
            "aws_security_group.juice-shop-sg",
            "aws_subnet.main_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:internet-gateway/igw-0dc8a9cf909c2ca7d",
            "id": "igw-0dc8a9cf909c2ca7d",
            "owner_id": "050752608040",
            "tags": {
              "Name": "main_igw"
            },
            "tags_all": {
              "Name": "main_igw"
            },
            "vpc_id": "vpc-0833f489981e476d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:route-table/rtb-09e293e409dfc3c82",
            "id": "rtb-09e293e409dfc3c82",
            "owner_id": "050752608040",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc8a9cf909c2ca7d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main_rt"
            },
            "tags_all": {
              "Name": "main_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0833f489981e476d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069930aa58f0a6889",
            "route_table_id": "rtb-09e293e409dfc3c82",
            "subnet_id": "subnet-08d06d4922ed9035e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.main_rt",
            "aws_subnet.main_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "juice-shop-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:security-group/sg-0803eaedc08f67e02",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0803eaedc08f67e02",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "juice-shop-sg",
            "name_prefix": "",
            "owner_id": "050752608040",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "juice-shop-sg"
            },
            "tags_all": {
              "Name": "juice-shop-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0833f489981e476d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:subnet/subnet-08d06d4922ed9035e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d06d4922ed9035e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050752608040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_subnet"
            },
            "tags_all": {
              "Name": "main_subnet"
            },
            "vpc_id": "vpc-0833f489981e476d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:vpc/vpc-0833f489981e476d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba363625ff933aa4",
            "default_route_table_id": "rtb-05aa83f9ec3be00e2",
            "default_security_group_id": "sg-04f173364fd53f8da",
            "dhcp_options_id": "dopt-0a020334efe8da372",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0833f489981e476d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05aa83f9ec3be00e2",
            "owner_id": "050752608040",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}